@@ -1,6 +1,7 @@
 Upcoming:
 - Fixed power bar display in the GUI of the shield
 - Fixed cleanup of shapecard previews
+- When the shield projector is destroyed by an explosion the shield template blocks will be restored first
 
 1.2.11:
 - Updates to latest McJtyLib
